Henry cleanup: a) Fix stretched logo on iPad, b) Fix styling on "Active Only" button, c) Fix spacing on upload page. (#19)
* Photo upload sizing

* Photo paddings and placeholder

* colors on active

--- a/src/Styling/Foundation.scss
+++ b/src/Styling/Foundation.scss
@@ -63,6 +63,15 @@
     top: 50%;
   }
 }
+
+.ev-latlong {
+  font-size: 0.75rem;
+}
+
+.ev-program-list {
+  font-size: 14px;
+  text-align: left;
+}
 /*----------------------------------------------------------------------------------------------------------*\
     #LAYOUT
   \*----------------------------------------------------------------------------------------------------------*/
@@ -131,7 +140,8 @@ body {
 .ev-photo-preview-container {
   background-color: #fff;
   padding: 5px 0 14px 0;
-  margin-bottom: 6px;
+  margin-top: 10px;
+
 }
 
 /*----------------------------------------------------------------------------------------------------------*\
